# PowerSBU

./: README.md  meson.build  meson_options.txt
contrib/: PowerSBU.spec.in  libmsx.spec.in
data/: com.hughski.PowerSBU.appdata.xml.in  com.hughski.PowerSBU.conf  com.hughski.PowerSBU.desktop.in  meson.build  sbu-gui.sgml  sbu-util.sgml  sbud.conf  sbud.service.in
plugins/: meson.build
plugins/dummy/: meson.build  sbu-plugin-dummy.c
plugins/msx/: meson.build  msx-common.c  msx-common.h  msx-context.h  msx-device.c  msx-device.h  msx-self-test.c  msx-util.c  sbu-plugin-msx.c
po/: POTFILES  en_GB.po
src/: com.hughski.PowerSBU.xml  egg-graph-point.c  egg-graph-point.h  egg-graph-widget.c  egg-graph-widget.h  meson.build  msx-context.c  msx-context.h  msx-database.c  msx-database.h  msx-device.c  msx-device.h  msx-gui.c  msx-gui.gresource.xml  msx-gui.ui  msx-self-test.c  msx-util.c  sbu-common.c  sbu-common.h  sbu-config.c  sbu-config.h  sbu-database.c  sbu-database.h  sbu-device-impl.c  sbu-device-impl.h  sbu-device.c  sbu-device.h  sbu-dummy-plugin.c  sbu-dummy-plugin.h  sbu-element-impl.c  sbu-element-impl.h  sbu-gui.c  sbu-gui.gresource.xml  sbu-gui.ui  sbu-link-impl.c  sbu-link-impl.h  sbu-link.c  sbu-link.h  sbu-main.c  sbu-manager-impl.c  (+21 more)
src/data/: com.hughski.MsxGui.appdata.xml.in  com.hughski.MsxGui.desktop.in  meson.build
